--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                     </div>
                     <h1 class="site-title">AI Directory</h1>
                 </div>
+                <div class="hamburger-menu" id="hamburger-menu">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
                 <div class="search-container">
                     <div class="search-icon">
                         <!-- Search SVG will be injected by JS -->
@@ -31,12 +36,7 @@
 
         <div class="main-container">
             <!-- Sidebar -->
-            <div class="sidebar">
-                <!-- Sidebar Ad Placeholder -->
-                <div class="glass-effect p-6 text-center">
-                    <p class="text-gray-400 text-sm">Sidebar Ad</p>
-                </div>
-
+            <div class="sidebar" id="sidebar">
                 <!-- Filters -->
                 <div class="filters-section glass-effect">
                     <div class="filters-header">
@@ -78,11 +78,6 @@
 
                 <!-- Pagination -->
                 <div id="pagination-container" class="pagination-container"></div>
-
-                <!-- Footer Ad Placeholder -->
-                <div class="mt-12 glass-effect p-8 text-center">
-                    <p>Footer Ad Space</p>
-                </div>
             </div>
         </div>
     </div>
